# thesis

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: modality_contribution.ipynb
src/: config.py
src/config/: __init__.py  config.py
src/data/: __init__.py  canonical.py  loader.py  registry.py  sampler.py
src/data/canonical/: __init__.py  canonical.py
src/data/config/: __init__.py  config.py
src/data/loader/: __init__.py  hugging_face_loader.py
src/data/sampler/: __init__.py
src/model/config/: __init__.py  config.py
src/model/contracts/: __init__.py  contracts.py
src/model/encoder/: __init__.py  text_encoder.py  vision_encoder.py
src/model/loader/: __init__.py  loader.py
src/model/projection/: __init__.py  projection.py
src/model/utils/: __init__.py  utils.py
src/outputs/results/: canonical_datasets.csv  canonical_datasets.json  canonical_datasets_from_nested.csv
src/utils/: __init__.py  device.py  folder.py  print.py  reproducibility.py  runtime.py
